tooling/nargo_cli/tests/snapshots/execute__tests__brillig_calls_array_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9282935796322463473",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/91YvW4TQRDevb/kgqJY0CHRQUF3lzvbcYEUEZukpaY6HFJQUVGfoKOi4gUiIfEa1FTwQuRgxx5/nt07h1uTZCVr927nvpn5vDOzu1r9bcHVT5txZHrN+lCtNpo7Nn32by3vESvzZaO+BTYGHmz800L48wNlb+TUL9Onpg/YfNij0yno7RP/KCsnqeBfj/YXKXDqCz/0g5/tGJwX9RIffVGsJzn8JmQyp0zm1CJzxmTOQIZ89rQmRp45LfbVepyRL6Q78qO71KBPgZ8K9O8pr+s316CP7EF+aLxPMvXSHg1zUb3uB83F9aofTdu9+j1kcri2Aib3hI2fmrHn9TjxnEOyBw6f6d1OrRZtEfPsHfFKPO9yeZhL2VxUr+rZM88R08OxyI4Y5B+b5wPTJ+wb+n4g6E9A/4rdwjvkJRXkU0E+ufo9MuN7alk3T+olno+6OfWDf0j4Mz/4RcNRE2PPiFPlNSeXFPc8D1GjuZjplvIoNWlDzXPNCcNFOdTJ11u8HS4mmJMpFm21Pwb5EdgZ+7Ezu89wbRz52nftAwdK+O94Dd90vfCaM2e4KEeN55So7t/n8VGWkT7K57GS/Y/YPJd/bp73wH7i6viadl6Mq/yiqC6qYXV+Xs4rXBdNCxhPdzWvfGS4KIc6pbxyoOz7AN/nDFfO4TrJtkCtxxjnGHPSS8bTJeDhXhjfEQcDtc6dhnHbPpbqvcQ15ou4BWsKWPz7uAOWS3dinhOLPOHFIP/K9A3PXwGzjZsZ+OOyLxCwbHHEv08s8gH4Q/KV4I/rjID5heRCwV6+xnBdSHUWsaS6zLFikH9res9nTLEuRxYfbHxM6/74mFr4eHeL+JhtwIdu4WMGfJD8e+DDV66X+AhB903YtzWNn8+wte3bvjFclEOd0trwzMXIFT9SbsP4+QB2/o/42Wa+5VhSvnXVmi7npk+m71o7u+bLqAOWy5+4xZ8I/CH5zw5/XPuRprnyHdZ53bM/2uLPF8GfLne5ns6/ne9yF3dlyms+yV3/re0ut5lLBFsHwhzGZSLoSQQ9ElbUI5YGf6Tc2eSpvs+91bg4mh+W8/HrYVEVo9Zzb9/6y2E1nlfjPJ+U+ZsyH25y7u4SN77O5F3jht5tK27a6gzGTSTYOlDy+uZjKf9Hgp5tYd20Oxi841fgI2/c7k3vYKQcLdW7LfHU+Q6GbNv0DuY74+kS/JPO89LaHyh7jnWtSc6/a+/X5Q6GY00Ba9M7GJdu6Q5G2gfhHcwP019nHzmrV/1x2acFLFsc8e9tdzAa/CH5n4I/TT35Dfoe/0vhJAAA",
  "debug_symbols": "ldndauMwEIbhe/FxDvQzM9L0VpalpK1bAiEpabqwlN577VK3JRIx70mIQh5s6ZOFPHobHsa716fb3eHx+DLc/Hkb9sf77Xl3PEytt/fNcHfa7fe7p9vfPw9h/pD0+f+X5+1hbr6ct6fzcBOrbobx8DB9c5/8424/Djca3v9uBslYCBaKhWFRsKhY+HWRglwIDVhELBIWGYtu5il+i1wuhWJhWBQsKhZOhXWvkd2/hIRGOBUlYBGxSFhkLAQLxcKwKFjgzAvOvOLMK8684sxrN3OJeRGxEYJFN3NJYRHpcr2qhkVZuatWVCycCg9YxH7PyyJyvBQJi7XMWyFYKBZGRQzd4TWRL2JSGxI5SStEc0MyJ8KJctIdZLNlslhpB7lwUteINcQxiYGTyEk/fV+WInNpSOZE1og3RDkxTgon3fTL94NcJDTEMUmBk8hJ4iRzIpzoGtGGGCeFk8qJY5L7G52wkNxsdGLOnMgKic3Sl5UT46Rw0t/ixh/Sdt8xkbBCUnNjEjlJnGRO+umnH9J2XzmxFdJue/q1kuukcuKY9Msl10nkJHGSORFOlBOevvL0laevPH3j6ffrIDUvO9gqzQ62Xwi5ThInmRPhRDkxTgonlRPHpPL0+yURlaWcp+0rT78mcp1kToQT5cQ4KZxUThyTfm3kOuHpO0/fefrO03eefr9CorpU99RaUjjpp2+2kNK8jLhTkvqlm1831iGRk8RJ5qSffsnfpDREOVlLv0MKJ5UTZ+R9av3bnnbbu/34dSL6+Hq4/3VAev7/PF6clT6fjvfjw+tpnE9Nfw5M57CSbbLN03CeUhY39tmYJ0ucZmC0Ol1xuuoH",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is brillig calls passing arrays around\nfn main(x: [u32; 3]) {\n    // Safety: testing context\n    unsafe {\n        assert(entry_point(x) == 9);\n        another_entry_point(x);\n    }\n}\n\nunconstrained fn inner(x: [u32; 3]) -> [u32; 3] {\n    [x[0] + 1, x[1] + 1, x[2] + 1]\n}\n\nunconstrained fn entry_point(x: [u32; 3]) -> u32 {\n    let y = inner(x);\n    y[0] + y[1] + y[2]\n}\n\nunconstrained fn nested_fn_that_allocates(value: u32) -> u32 {\n    let x = [value, value, value];\n    let y = inner(x);\n    y[0] + y[1] + y[2]\n}\n\nunconstrained fn another_entry_point(x: [u32; 3]) {\n    assert(x[0] == 1);\n    assert(x[1] == 2);\n    assert(x[2] == 3);\n    assert(nested_fn_that_allocates(1) == 6);\n    // x should be unchanged\n    assert(x[0] == 1);\n    assert(x[1] == 2);\n    assert(x[2] == 3);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/brillig_calls_array/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
